--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
   <script>
     // --- Demo product data ---
     const PRODUCTS = [
-      { id:'p1', title:'Bamboo Water Bottle 500ml', price:399, img:'', desc:'Lightweight stainless inner with bamboo outer. Good for daily use.' },
-      { id:'p2', title:'Handmade Bamboo Stool', price:2499, img:'', desc:'Sturdy 3-leg stool made from treated bamboo. Natural finish.' },
-      { id:'p3', title:'Bamboo Table Lamp', price:1799, img:'', desc:'Ambient table lamp with bamboo shade and warm LED.' },
-      { id:'p4', title:'Folding Relax Chair', price:3299, img:'', desc:'Portable folding chair for patios and balconies.' },
-      { id:'p5', title:'Bamboo Dining Table (Small)', price:8999, img:'', desc:'Compact dining table fits 4 people. Sustainably sourced.' }
+      { id:'p1', title:'Bamboo Water Bottle 500ml', price:399, img:'./wb.jpg', desc:'Lightweight stainless inner with bamboo outer. Good for daily use.' },
+      { id:'p2', title:'Handmade Bamboo Stool', price:2499, img:'https://m.media-amazon.com/images/I/81f1F2D4IUL.jpg', desc:'Sturdy 3-leg stool made from treated bamboo. Natural finish.' },
+      { id:'p3', title:'Bamboo Table Lamp', price:1799, img:'https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcT1KVpd0Up-WWT48y3JcBG6FnAJPOPnZKFLHslX2NgRI9oDluiJpzVbon1wDxoeKlIrwNzo6ADCYlbuCdbZAjQr0N7v9bx-N1Ff4Rqq0qxS', desc:'Ambient table lamp with bamboo shade and warm LED.' },
+      { id:'p4', title:'Folding Relax Chair', price:3299, img:'https://m.media-amazon.com/images/I/51g-l01-I2L.jpg', desc:'Portable folding chair for patios and balconies.' },
+      { id:'p5', title:'Bamboo Dining Table (Small)', price:8999, img:'https://m.media-amazon.com/images/I/71USyB3JEZL.jpg', desc:'Compact dining table fits 4 people. Sustainably sourced.' }
     ];
 
     // --- Simple SPA state ---
@@ -134,7 +134,10 @@
         const card = document.createElement('div');
         card.style.cssText = 'background:white;border-radius:10px;padding:12px;box-shadow:0 1px 3px rgba(0,0,0,0.04);display:flex;flex-direction:column;gap:8px;'
         card.innerHTML = `\
-          <div style="height:140px;border-radius:8px;background:#eee;display:flex;align-items:center;justify-content:center;color:#666;">Image</div>\
+          <div style="height:140px;border-radius:8px;background:#eee;display:flex;align-items:center;justify-content:center;color:#666;">
+            <img src="${p.img}" style="width:100%; height:100%; object-fit:cover; border-radius:8px;" />
+
+            </div>\
           <div style="font-weight:700;">${p.title}</div>\
           <div style="color:#666;font-size:13px;">${p.desc}</div>\
           <div style="margin-top:auto;display:flex;justify-content:space-between;align-items:center;">\
